syntax = "proto3";

package example.v1;

service Example {

  rpc Foo(FooRequest) returns (FooResponse) {}

  rpc Bar(FooRequest) returns (FooResponse) {}

  rpc ShouldRemove(FooRequest) returns (FooResponse) {}

  rpc PaginatedMethod(BarRequest) returns (BarResponse) {}
}

message FooRequest {}

message FooResponse {}

message BarRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message BarResponse {
  repeated string content = 1;
  string next_page_token = 2;
}
