syntax = "proto3";

package example.v1beta1;

// Comment for service Example
service Example {

  // Comment for rpc Foo
  rpc Foo(FooRequestUpdate) returns (FooResponseUpdate) {}

  rpc Bar(stream FooRequest) returns (stream FooResponse) {}

  rpc PaginatedMethod(BarRequest) returns (BarResponse) {}
}

message FooRequest {}

message FooResponse {}

message FooRequestUpdate {}

message FooResponseUpdate {}

message BarRequest {}

message BarResponse {}
